--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+* .tar
+* .tar. *
+* .jar
+* .exe
+* .msi
+* .zip
+* .tgs
+* .log
+* .log. *
+* .sig
 
-# Other files and folders
-.settings/
+pkg /
+src /
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+
+
+
+
+
